[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

[dependencies]

[[test]]
name = "fraction_addition"
path = "bin/fraction_additon.rs"

[[test]]
name = "two_sum"
path = "bin/two_sum.rs"

[[test]]
name = "two_number_add"
path = "bin/two_numbers.rs"

[[test]]
name = "substring_without_repeating"
path = "bin/substring_without_repeating.rs"

[[test]]
name = "median_sorted_arrays"
path = "bin/median_sorted_arrays.rs"

[[test]]
name = "longest_palindromic_substring"
path = "bin/longest_palindromic_substring.rs"
